--- a/Poetry_Sentiment_Analysis.ipynb
+++ b/Poetry_Sentiment_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -307,82 +307,106 @@
       "************ \n",
       " \n",
       "0.0\n",
-      "Dearest Father, forgive me for I have seen.\n",
+      "Dearest Father, forgive me for I have seen\n",
       "-0.2\n",
+      "\n",
+      "\n",
       "Behind the wooden fence, a field lit\n",
-      "0.0\n",
+      "\n",
       "with summer, a man pressing a shank\n",
+      "\n",
+      "to another man's throat\n",
       "0.4\n",
-      "to another man's throat. Steel turning to light\n",
+      " Steel turning to light\n",
+      "\n",
+      "on sweat-slick neck\n",
       "0.0\n",
-      "on sweat-slick neck. Forgive me\n",
+      " Forgive me\n",
+      "\n",
+      "for not calling Your name\n",
       "0.0\n",
-      "for not calling Your name. For thinking:\n",
-      "0.0\n",
+      " For thinking:\n",
+      "\n",
       "this must be how every prayer\n",
-      "0.0\n",
+      "\n",
       "begins-the word Please cleaving\n",
-      "0.0\n",
+      "\n",
       "the wind into fragments, into what\n",
-      "0.0\n",
+      "\n",
       "a boy hears in his need to know\n",
-      "0.0\n",
+      "\n",
       "how pain blesses the body back\n",
+      "\n",
+      "to its sinner\n",
       "0.0\n",
-      "to its sinner. The hour suddenly\n",
-      "0.0\n",
-      "stilled. The man genuflected, his lips\n",
-      "-0.16666666666666666\n",
+      " The hour suddenly\n",
+      "\n",
+      "stilled\n",
+      "0.016666666666666677\n",
+      " The man genuflected, his lips\n",
+      "\n",
       "pressed to black boot as the words spilled\n",
-      "0.0\n",
+      "\n",
       "from his mouth like rosaries\n",
-      "0.2\n",
+      "\n",
       "shattering from too much\n",
-      "0.0\n",
-      "Father. Am I wrong to love\n",
-      "0.10000000000000002\n",
+      "\n",
+      "Father\n",
+      "0.08888888888888889\n",
+      " Am I wrong to love\n",
+      "\n",
       "those eyes, to see something so clear\n",
-      "0.0\n",
+      "\n",
       "and blue-beg to remain\n",
-      "0.05000000000000001\n",
+      "\n",
       "clear and blue? Did my cheek twitch\n",
-      "0.0\n",
+      "\n",
       "when that darkness bloomed from his crotch\n",
-      "0.0\n",
+      "\n",
       "and trickled into ochre dirt? Father,\n",
-      "0.3333333333333333\n",
+      "\n",
       "how quickly the blade becomes\n",
+      "\n",
+      "You\n",
       "0.0\n",
-      "You. But let me begin again: There's a boy\n",
-      "0.0\n",
+      " But let me begin again: There's a boy\n",
+      "\n",
       "kneeling in a house with every door kicked open\n",
+      "\n",
+      "to summer\n",
       "0.0\n",
-      "to summer. There's a question corroding\n",
+      " There's a question corroding\n",
+      "\n",
+      "his tongue\n",
       "0.5\n",
-      "his tongue. There's a knife touching\n",
-      "0.0\n",
-      "Your name lodged inside the throat.\n",
-      "0.0\n",
-      "Dearest Father, what becomes of the boy\n",
-      "0.0\n",
-      "no longer a boy? Please-\n",
-      "0.0\n",
-      "what becomes of the shepherd\n",
+      " There's a knife touching\n",
+      "\n",
+      "Your name lodged inside the throat\n",
       "\n",
       "************ \n",
       " sad lines \n",
       "************ \n",
       " \n",
+      "\n",
+      "\n",
       "Behind the wooden fence, a field lit\n",
-      "pressed to black boot as the words spilled\n",
+      "\n",
+      "with summer, a man pressing a shank\n",
+      "\n",
+      "to another man's throat\n",
       "\n",
       "************ \n",
       " confusing lines \n",
       "************ \n",
       " \n",
-      "to its sinner. The hour suddenly\n",
-      "Father. Am I wrong to love\n",
-      "kneeling in a house with every door kicked open\n"
+      " The hour suddenly\n",
+      "\n",
+      "stilled\n",
+      " But let me begin again: There's a boy\n",
+      "\n",
+      "kneeling in a house with every door kicked open\n",
+      "\n",
+      "to summer\n"
      ]
     }
    ],
@@ -403,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -487,82 +511,116 @@
       "************ \n",
       " \n",
       "0.533\n",
-      "Dearest Father, forgive me for I have seen.\n",
+      "Dearest Father, forgive me for I have seen\n",
       "0.0\n",
+      "\n",
+      "\n",
       "Behind the wooden fence, a field lit\n",
-      "0.0\n",
+      "\n",
       "with summer, a man pressing a shank\n",
+      "\n",
+      "to another man's throat\n",
       "0.0\n",
-      "to another man's throat. Steel turning to light\n",
-      "0.344\n",
-      "on sweat-slick neck. Forgive me\n",
-      "0.0\n",
-      "for not calling Your name. For thinking:\n",
-      "0.0\n",
-      "this must be how every prayer\n",
-      "0.434\n",
-      "begins-the word Please cleaving\n",
-      "0.0\n",
-      "the wind into fragments, into what\n",
-      "0.0\n",
-      "a boy hears in his need to know\n",
-      "0.33\n",
-      "how pain blesses the body back\n",
-      "0.0\n",
-      "to its sinner. The hour suddenly\n",
-      "0.0\n",
-      "stilled. The man genuflected, his lips\n",
-      "0.0\n",
-      "pressed to black boot as the words spilled\n",
-      "0.385\n",
-      "from his mouth like rosaries\n",
-      "0.0\n",
-      "shattering from too much\n",
-      "0.408\n",
-      "Father. Am I wrong to love\n",
-      "0.359\n",
-      "those eyes, to see something so clear\n",
-      "0.0\n",
-      "and blue-beg to remain\n",
-      "0.302\n",
-      "clear and blue? Did my cheek twitch\n",
-      "0.0\n",
-      "when that darkness bloomed from his crotch\n",
+      " Steel turning to light\n",
+      "\n",
+      "on sweat-slick neck\n",
+      "0.259\n",
+      " Forgive me\n",
+      "\n",
+      "for not calling Your name\n",
       "0.147\n",
+      " For thinking:\n",
+      "\n",
+      "this must be how every prayer\n",
+      "\n",
+      "begins-the word Please cleaving\n",
+      "\n",
+      "the wind into fragments, into what\n",
+      "\n",
+      "a boy hears in his need to know\n",
+      "\n",
+      "how pain blesses the body back\n",
+      "\n",
+      "to its sinner\n",
+      "0.0\n",
+      " The hour suddenly\n",
+      "\n",
+      "stilled\n",
+      "0.102\n",
+      " The man genuflected, his lips\n",
+      "\n",
+      "pressed to black boot as the words spilled\n",
+      "\n",
+      "from his mouth like rosaries\n",
+      "\n",
+      "shattering from too much\n",
+      "\n",
+      "Father\n",
+      "0.23\n",
+      " Am I wrong to love\n",
+      "\n",
+      "those eyes, to see something so clear\n",
+      "\n",
+      "and blue-beg to remain\n",
+      "\n",
+      "clear and blue? Did my cheek twitch\n",
+      "\n",
+      "when that darkness bloomed from his crotch\n",
+      "\n",
       "and trickled into ochre dirt? Father,\n",
-      "0.0\n",
+      "\n",
       "how quickly the blade becomes\n",
+      "\n",
+      "You\n",
       "0.0\n",
-      "You. But let me begin again: There's a boy\n",
-      "0.0\n",
+      " But let me begin again: There's a boy\n",
+      "\n",
       "kneeling in a house with every door kicked open\n",
+      "\n",
+      "to summer\n",
       "0.0\n",
-      "to summer. There's a question corroding\n",
+      " There's a question corroding\n",
+      "\n",
+      "his tongue\n",
       "0.0\n",
-      "his tongue. There's a knife touching\n",
-      "0.0\n",
-      "Your name lodged inside the throat.\n",
-      "0.375\n",
-      "Dearest Father, what becomes of the boy\n",
-      "0.354\n",
-      "no longer a boy? Please-\n",
-      "0.0\n",
-      "what becomes of the shepherd\n",
+      " There's a knife touching\n",
+      "\n",
+      "Your name lodged inside the throat\n",
       "\n",
       "************ \n",
       " sad lines \n",
       "************ \n",
       " \n",
-      "0.303\n",
+      "0.082\n",
+      " For thinking:\n",
+      "\n",
+      "this must be how every prayer\n",
+      "\n",
+      "begins-the word Please cleaving\n",
+      "\n",
+      "the wind into fragments, into what\n",
+      "\n",
+      "a boy hears in his need to know\n",
+      "\n",
       "how pain blesses the body back\n",
-      "0.301\n",
-      "Father. Am I wrong to love\n",
-      "0.25\n",
+      "\n",
+      "to its sinner\n",
+      "0.139\n",
+      " Am I wrong to love\n",
+      "\n",
+      "those eyes, to see something so clear\n",
+      "\n",
+      "and blue-beg to remain\n",
+      "\n",
+      "clear and blue? Did my cheek twitch\n",
+      "\n",
       "when that darkness bloomed from his crotch\n",
-      "0.32\n",
+      "\n",
       "and trickled into ochre dirt? Father,\n",
-      "0.338\n",
-      "no longer a boy? Please-\n"
+      "\n",
+      "how quickly the blade becomes\n",
+      "\n",
+      "You\n"
      ]
     }
    ],
@@ -582,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -927,67 +985,81 @@
       "************ \n",
       " \n",
       "{'neg': 0.0, 'neu': 0.467, 'pos': 0.533, 'compound': 0.6908}\n",
-      "Dearest Father, forgive me for I have seen.\n",
+      "Dearest Father, forgive me for I have seen\n",
       "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
+      "\n",
+      "\n",
       "Behind the wooden fence, a field lit\n",
-      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
+      "\n",
       "with summer, a man pressing a shank\n",
+      "\n",
+      "to another man's throat\n",
       "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
-      "to another man's throat. Steel turning to light\n",
-      "{'neg': 0.0, 'neu': 0.656, 'pos': 0.344, 'compound': 0.2732}\n",
-      "on sweat-slick neck. Forgive me\n",
-      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
-      "for not calling Your name. For thinking:\n",
-      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
+      " Steel turning to light\n",
+      "\n",
+      "on sweat-slick neck\n",
+      "{'neg': 0.0, 'neu': 0.741, 'pos': 0.259, 'compound': 0.2732}\n",
+      " Forgive me\n",
+      "\n",
+      "for not calling Your name\n",
+      "{'neg': 0.082, 'neu': 0.771, 'pos': 0.147, 'compound': 0.3818}\n",
+      " For thinking:\n",
+      "\n",
       "this must be how every prayer\n",
-      "{'neg': 0.0, 'neu': 0.566, 'pos': 0.434, 'compound': 0.3182}\n",
+      "\n",
       "begins-the word Please cleaving\n",
-      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
+      "\n",
       "the wind into fragments, into what\n",
-      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
+      "\n",
       "a boy hears in his need to know\n",
-      "{'neg': 0.303, 'neu': 0.367, 'pos': 0.33, 'compound': 0.0772}\n",
+      "\n",
       "how pain blesses the body back\n",
+      "\n",
+      "to its sinner\n",
       "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
-      "to its sinner. The hour suddenly\n",
-      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
-      "stilled. The man genuflected, his lips\n",
-      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
+      " The hour suddenly\n",
+      "\n",
+      "stilled\n",
+      "{'neg': 0.0, 'neu': 0.898, 'pos': 0.102, 'compound': 0.3612}\n",
+      " The man genuflected, his lips\n",
+      "\n",
       "pressed to black boot as the words spilled\n",
-      "{'neg': 0.0, 'neu': 0.615, 'pos': 0.385, 'compound': 0.3612}\n",
+      "\n",
       "from his mouth like rosaries\n",
-      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
+      "\n",
       "shattering from too much\n",
-      "{'neg': 0.301, 'neu': 0.291, 'pos': 0.408, 'compound': 0.2732}\n",
-      "Father. Am I wrong to love\n",
-      "{'neg': 0.0, 'neu': 0.641, 'pos': 0.359, 'compound': 0.5214}\n",
+      "\n",
+      "Father\n",
+      "{'neg': 0.139, 'neu': 0.631, 'pos': 0.23, 'compound': 0.7089}\n",
+      " Am I wrong to love\n",
+      "\n",
       "those eyes, to see something so clear\n",
-      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
+      "\n",
       "and blue-beg to remain\n",
-      "{'neg': 0.0, 'neu': 0.698, 'pos': 0.302, 'compound': 0.3818}\n",
+      "\n",
       "clear and blue? Did my cheek twitch\n",
-      "{'neg': 0.25, 'neu': 0.75, 'pos': 0.0, 'compound': -0.25}\n",
+      "\n",
       "when that darkness bloomed from his crotch\n",
-      "{'neg': 0.32, 'neu': 0.533, 'pos': 0.147, 'compound': -0.3182}\n",
+      "\n",
       "and trickled into ochre dirt? Father,\n",
-      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
+      "\n",
       "how quickly the blade becomes\n",
+      "\n",
+      "You\n",
       "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
-      "You. But let me begin again: There's a boy\n",
-      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
+      " But let me begin again: There's a boy\n",
+      "\n",
       "kneeling in a house with every door kicked open\n",
+      "\n",
+      "to summer\n",
       "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
-      "to summer. There's a question corroding\n",
+      " There's a question corroding\n",
+      "\n",
+      "his tongue\n",
       "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
-      "his tongue. There's a knife touching\n",
-      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
-      "Your name lodged inside the throat.\n",
-      "{'neg': 0.0, 'neu': 0.625, 'pos': 0.375, 'compound': 0.5574}\n",
-      "Dearest Father, what becomes of the boy\n",
-      "{'neg': 0.338, 'neu': 0.308, 'pos': 0.354, 'compound': 0.0258}\n",
-      "no longer a boy? Please-\n",
-      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
-      "what becomes of the shepherd\n"
+      " There's a knife touching\n",
+      "\n",
+      "Your name lodged inside the throat\n"
      ]
     }
    ],
@@ -1032,21 +1104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'splinter'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-b2d686e62f7a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msplinter\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mBrowser\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'splinter'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
